force-app/main/default/objects/Shipper_Consignee_Indigo_AWB__mdt/Shipper_Consignee_Indigo_AWB__mdt.object-meta.xml
<CustomObject>
    <label>Shipper/Consignee Indigo AWB</label>
    <pluralLabel>Shipper/Consignee Indigo AWBs</pluralLabel>
</CustomObject>