force-app/main/default/objects/Shipper_Consignee_Indigo_AWB__mdt/fields/ACCOUNT_CODE__c.field-meta.xml
<CustomField>
    <fullName>ACCOUNT_CODE__c</fullName>
    <label>ACCOUNT_CODE</label>
    <length>200</length>
    <type>Text</type>
</CustomField>