force-app/main/default/objects/Shipper_Consignee_Indigo_AWB__mdt/fields/ACCOUNT_NAME__c.field-meta.xml
<CustomField>
    <fullName>ACCOUNT_NAME__c</fullName>
    <label>ACCOUNT_NAME</label>
    <length>250</length>
    <type>Text</type>
</CustomField>