force-app/main/default/objects/Shipper_Consignee_Indigo_AWB__mdt/fields/AGENT_CODE__c.field-meta.xml
<CustomField>
    <fullName>AGENT_CODE__c</fullName>
    <label>AGENT_CODE</label>
    <length>100</length>
    <type>Text</type>
</CustomField>