force-app/main/default/objects/Shipper_Consignee_Indigo_AWB__mdt/fields/CITY__c.field-meta.xml
<CustomField>
    <fullName>CITY__c</fullName>
    <label>CITY</label>
    <length>255</length>
    <type>Text</type>
</CustomField>