force-app/main/default/objects/Shipper_Consignee_Indigo_AWB__mdt/fields/COUNTRY__c.field-meta.xml
<CustomField>
    <fullName>COUNTRY__c</fullName>
    <label>COUNTRY</label>
    <length>100</length>
    <type>Text</type>
</CustomField>