force-app/main/default/objects/Shipper_Consignee_Indigo_AWB__mdt/fields/PARTICIPATION_TYPE__c.field-meta.xml
<CustomField>
    <fullName>PARTICIPATION_TYPE__c</fullName>
    <label>PARTICIPATION_TYPE</label>
    <length>255</length>
    <type>Text</type>
</CustomField>