force-app/main/default/objects/Shipper_Consignee_Indigo_AWB__mdt/listViews/ALL_DATA.listView-meta.xml
<ListView>
    <fullName>ALL_DATA</fullName>
    <columns>MasterLabel</columns>
    <columns>DeveloperName</columns>
    <columns>ACCOUNT_CODE__c</columns>
    <columns>CITY__c</columns>
    <columns>AGENT_CODE__c</columns>
    <columns>Airport_Code__c</columns>
    <columns>ACCOUNT_NAME__c</columns>
    <columns>COUNTRY__c</columns>
    <columns>PARTICIPATION_TYPE__c</columns>
    <filterScope>Everything</filterScope>
    <label>ALL DATA</label>
</ListView>