force-app/main/default/objects/Shipper_Consignee_Indigo_AWB__mdt/listViews/No_Airport_Code.listView-meta.xml
<ListView>
    <fullName>No_Airport_Code</fullName>
    <columns>MasterLabel</columns>
    <columns>DeveloperName</columns>
    <columns>NamespacePrefix</columns>
    <columns>ACCOUNT_CODE__c</columns>
    <columns>AGENT_CODE__c</columns>
    <columns>Airport_Code__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Airport_Code__c</field>
        <operation>equals</operation>
    </filters>
    <label>No Airport Code</label>
</ListView>